More elements of flexbox

--- a/Cursos/Bases/Box models and elements positioning/Learning-flexbox.html
+++ b/Cursos/Bases/Box models and elements positioning/Learning-flexbox.html
@@ -28,6 +28,24 @@
         <div class="child">3</div>
         <div class="child">1</div>
       </section>
+
+      <h2 class="title">Flex-direction</h2>
+      <section class="Flex-direction">
+        <div class="child">1</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">1</div>
+      </section>
+
+      <h2 class="title">Flex-child</h2>
+      <section class="flex-child">
+        <div class="child grow">1</div>
+        <div class="child">2</div>
+        <div class="child basis">3</div>
+        <div class="child">4</div>
+        <div class="child shrink">5</div>
+        <div class="child flex">6</div>
+      </section>
     </main>
   </body>
 </html>
