position and flex combined with practice.

--- a/Cursos/Bases/2. Box models and elements positioning/display-and-position.html
+++ b/Cursos/Bases/2. Box models and elements positioning/display-and-position.html
@@ -19,10 +19,10 @@
 
     <section class="property-section">
       <h2 class="section-title">Display property</h2>
-      <div class="property-section-content">
-        <article>Relative</article>
-        <article>Absolute</article>
-        <article>Fixed</article>
+      <div class="property-section-content position-group">
+        <article class="container relative">Relative</article>
+        <article class="container absolute">Absolute</article>
+        <article class="container fixed">Fixed</article>
       </div>
     </section>
   </body>
