--- a/Cursos/Bases/3. Exercise 1 Position/Index.html
+++ b/Cursos/Bases/3. Exercise 1 Position/Index.html
@@ -14,18 +14,102 @@
       </nav>
       <div class="main-group">
         <section>
-          <div class="title-container"><h2>Cajas del contenido principal</h2></div>
-        <div class="article-group"><article>1</article>
-        <article>2</article>
-        <article>3</article>
-        <article>4</article>
-        <article>5</article>
-        <article>6</article>
-        <article>7</article>
-        <article>8</article></div>
+          <div class="title-container">
+            <h2>Cajas del contenido principal</h2>
+          </div>
+          <div class="article-group">
+            <article>1</article>
+            <article>2</article>
+            <article>3</article>
+            <article>4</article>
+            <article>5</article>
+            <article>6</article>
+            <article>7</article>
+            <article>8</article>
+          </div>
         </section>
 
-        <aside class="aside"></aside>
+        <aside class="aside">
+          <h2>Elementos de la barra lateral</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+            repellendus exercitationem amet iure nulla itaque cupiditate ipsam
+            labore, nam officia delectus laboriosam sint molestias, minus
+            voluptates eligendi et omnis harum. Modi soluta doloribus tempore
+            omnis vel, eius maiores eaque minus assumenda possimus dolorem, hic
+            sapiente rerum doloremque reiciendis atque, aperiam neque aut
+            eveniet blanditiis enim ipsa optio! Maiores, ut commodi. Natus
+            necessitatibus quam voluptate optio hic, eaque voluptatum quaerat ut
+            expedita similique distinctio commodi ducimus voluptatibus quo rem
+            cum labore reprehenderit odit vel sit. Molestiae nulla dignissimos
+            delectus fugit tempora. Repellat officia et, consectetur eos magnam
+            veritatis. Cupiditate autem nobis rerum dolor nemo accusamus
+            voluptatum suscipit, dignissimos repellat corrupti temporibus
+            tempora! Minus, doloremque. Nesciunt hic quae voluptatum, debitis
+            dolorum eius? Consequuntur, sunt? Quae eveniet adipisci unde
+            reprehenderit qui, facilis sed pariatur, veniam quam possimus
+            dolores corrupti nam voluptates a ea? Excepturi adipisci eos omnis
+            architecto corporis doloribus cum laborum! Corrupti! Repellat natus
+            rerum iste harum perferendis iure saepe eligendi ratione? Omnis
+            perspiciatis facilis explicabo harum amet ullam, consequatur, nemo
+            rem hic, similique distinctio illum aliquam mollitia soluta porro
+            eius quidem! Numquam doloremque, dignissimos ullam aliquam totam
+            magnam optio ex recusandae perferendis excepturi veniam dolorem enim
+            neque atque sequi natus a omnis vitae velit quisquam nostrum ipsum
+            architecto saepe accusantium! Dolorum! A nulla libero deserunt nam
+            impedit cupiditate, dolore ut earum autem nemo exercitationem ea
+            accusantium praesentium, optio ducimus adipisci error, voluptas
+            temporibus dolorum minus eius quibusdam facilis. Odit, est incidunt?
+            Quaerat in vel ea ab eum ut? Labore accusantium tempora at
+            perferendis ipsum nostrum ratione. Dolore ullam modi odio maxime!
+            Itaque cupiditate, distinctio labore officiis magnam blanditiis
+            fugiat dolore nulla? Doloribus dolorem, eius mollitia suscipit omnis
+            in ab quaerat exercitationem ducimus illo nam nisi est molestiae a,
+            commodi totam nulla atque eveniet cum cumque? Maxime labore
+            voluptate earum est harum! Neque sint saepe quidem ea reprehenderit
+            sunt. Vero voluptatum distinctio dolor est maxime nobis, autem
+            molestias alias provident harum commodi fugit, quo aliquam
+            recusandae voluptates, accusamus deleniti veritatis minima nulla! Ab
+            id magnam porro modi! Provident explicabo ad iure possimus corrupti,
+            quia sapiente vitae architecto, sunt cum distinctio esse cupiditate
+            deleniti minima hic, adipisci tempora. Labore libero odio
+            perferendis voluptatum. Accusamus, expedita reiciendis at temporibus
+            accusantium velit sint non perferendis, beatae ab quis cumque ex
+            sequi, voluptatibus hic voluptatem adipisci voluptates quia dolorem
+            vero a labore architecto. Ducimus, quidem officia. Vitae perferendis
+            error quos, laudantium sint recusandae illo a commodi quod, dicta
+            voluptatibus laboriosam ab obcaecati tempora maiores consequatur
+            sapiente soluta et provident similique neque. Reprehenderit nulla
+            nam ratione unde! Distinctio, dolores animi voluptate perspiciatis
+            ratione corrupti autem odio mollitia quod! Ex, sunt culpa. Vitae ab
+            modi odit pariatur eveniet nisi ipsum! Laboriosam similique quam
+            enim. Quaerat pariatur fugit iste! Maxime ullam, veritatis,
+            similique animi dolor velit laborum quod doloremque magni repellat
+            deserunt. Eius accusantium, dignissimos commodi quia sapiente quasi
+            facere corrupti? Veniam quia exercitationem eveniet sapiente neque
+            nihil nostrum? Voluptates doloremque itaque earum consequatur ex
+            aut, ipsum aspernatur aliquam! Doloribus praesentium rem vitae
+            dignissimos quaerat omnis sunt fuga beatae possimus recusandae sed
+            pariatur nostrum ad nulla modi, debitis non? Eius earum aliquam
+            laborum praesentium natus aut velit adipisci nisi sint, laudantium
+            excepturi voluptatum debitis? Dolor, voluptatum ut rem, quisquam
+            quia nam aperiam aliquid facilis voluptatibus consectetur error?
+            Totam, repudiandae. Corporis, sapiente! Nobis odit in corporis
+            asperiores perspiciatis, est ullam sed quaerat nulla, obcaecati
+            perferendis deleniti magnam minus fugiat alias nemo, similique
+            officiis provident mollitia. Necessitatibus velit itaque ad
+            repellat! Excepturi nisi eos, dicta animi nesciunt odio inventore
+            amet doloribus consequatur quibusdam vitae corrupti impedit
+            incidunt? Iusto iure voluptate tenetur, doloremque, corrupti nobis,
+            maiores veritatis quibusdam aliquam ullam quia ea!
+          </p>
+        </aside>
       </div>
+      <footer><p>Todos los derechos reservados &copy; Oscar Varela</p></footer>
+    </main>
+
+    <div class="fixed-box">Caja Fija</div>
+    <div class="absolute-box">Caja Absoluta 1</div>
+    <div class="absolute-box-2">Caja Absoluta 2</div>
   </body>
 </html>
